@@ -1,3 +1,10 @@
+2011-08-20 Charles Suprin <hamaa1vs at gmail.com>
+
+    * ChangeLog
+    * src/tle-update.c
+    Updates satellite name and nickname if of form YYYY-NNNAAA indicating first TLE downloaded before celestrak used given name and improves error reporting.
+
+
 2011-08-09 Charles Suprin <hamaa1vs at gmail.com>
 
     * ChangeLog
